# dtkdeclarative

./: .gitignore  .syncexclude  CHANGELOG.md  CMakeLists.txt  DIconButton.qml  README.md  README.zh_CN.md  README_zh_CN.md  dtkdeclarative.pro  linglong.yaml  main.cpp  main.qml  qml.qrc
chameleon/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  DelayButton.qml  Dial.qml  GroupBox.qml  Menu.qml  PixelMetric.js  RadioButton.qml  RoundButton.qml  ScrollBar.qml  ScrollView.qml  SliderHandle.qml  StackView.qml  Switch.qml  TextField.qml  chameleon.pro  chameleon.qrc  dtkdeclarative_chameleon.qrc  qml.pri  qml.qrc  qmldir
chameleon/qml/: qml.pri
chameleon/src/: chameleonplugin.cpp  chameleonplugin.h  dquickpalette.cpp  dquickpalette_p.h  dquickpaletteprovider.cpp  dquickpaletteprovider_p.h  qtquickcontrols2chameleonstyleplugin.cpp  qtquickcontrols2chameleonstyleplugin.h  src.cmake  src.pri
docs/: CMakeLists.txt  DevSpecification.zh_CN.md  dtkdeclarative.qdocconf  index.zh_CN.md
docs/qml/: AboutDialog.zh_CN.dox  ActionButton.zh_CN.dox  AlertToolTip.zh_CN.dox  ApplicationWIndow.zh_CN.dox  ArrowShapeBlur.zh_CN.dox  BoxInsetShadow.zh_CN.dox  BoxPanel.zh_CN.dox  BoxShadow.zh_CN.dox  BusyIndicator.zh_CN.dox  Button.zh_CN.dox  ButtonBox.zh_CN.dox  ButtonIndicator.zh_CN.dox  CheckBox.zh_CN.dox  CheckDelegate.zh_CN.dox  ComboBox.zh_CN.dox  EmbeddedProgressBar.zh_CN.dox  FloatingButton.zh_CN.dox  FloatingMessage.zh_CN.dox  FloatingPanel.zh_CN.dox  FocusBoxBorder.zh_CN.dox  HighlightPanel.zh_CN.dox  InsideBoxBorder.zh_CN.dox  Ipv4Edit.zh_CN.dox  ItemDelegate.zh_CN.dox  KeySequenceEdit.zh_CN.dox  LineEdit.zh_CN.dox  Menu.zh_CN.dox  MenuItem.zh_CN.dox  MenuSeparator.zh_CN.dox  OutsideBoxBorder.zh_CN.dox  PasswordEdit.zh_CN.dox  PlusMinusSpinBox.zh_CN.dox  PopupWindow.zh_CN.dox  ProgressBar.zh_CN.dox  RatioButton.zh_CN.dox  RecommandButton.zh_CN.dox  RectangularShadow.zh_CN.dox  SearchEdit.zh_CN.dox  Slider.zh_CN.dox  SpinBox.zh_CN.dox  (+3 more)
examples/: CMakeLists.txt  Example_1.qml  Example_2.qml  Example_3.qml  Example_Notify.qml  Example_TitleBar.qml  Example_colorselector.qml  Example_settingsdialog.qml  dciicons.qrc  examples.pro  image.qrc  main.cpp  main.qml  qml.qrc
examples/common/: DOSDSlider.qml
examples/debug/: Example_1.qml  Example_2.qml  Example_3.qml  Example_Flickable.qml  Example_Menu.qml  Example_Notify.qml  Example_Popup.qml  Example_TitleBar.qml  Example_colorselector.qml  Example_config.qml  Example_customcontrolforcs.qml  Example_settingsdialog.qml  debug.pro  main.cpp  main.qml  qml.qrc
examples/exhibition/: Button.qml  CMakeLists.txt  ColorButton.qml  Dialog.qml  EditControl.qml  GroupTitle.qml  ImageCell.qml  KeySequenceEdit.qml  ListControl.qml  Mask.qml  Menu.qml  Notify.qml  Popup.qml  ProgressBar.qml  PropertyItemDelegate.qml  ScrollBar.qml  SideBar.qml  SideBarItem.qml  Slider.qml  Spinner.qml  ToolBar.qml  ViewQMLSource.qml  assets.qrc  dtk-exhibition.desktop  dtk-exhibition.desktop.in  exhibition.pro  main.cpp  main.qml  qml.qrc
examples/qml-app-template/: CMakeLists.txt  launcherplugin.cpp  launcherplugin.h  main.qml  wizard.json
examples/qml-inspect/: CMakeLists.txt  Example_1.qml  Example_2.qml  Example_3.qml  Example_GroupBox.qml  Example_Notify.qml  Example_Popup.qml  Example_TitleBar.qml  Example_colorselector.qml  Example_config.qml  Example_settingsdialog.qml  main.cpp  main.qml  qml.qrc
qmlplugin/: CMakeLists.txt  qmldir  qmlplugin.pro  qmlplugin_plugin.cpp  qmlplugin_plugin.h  targets.cmake
qt6/src/: CMakeLists.txt  dqmlregister_p.h  dquickextendregister_p.h  dtkdeclarative6_config.h  dtkdeclarative_qml.qrc  dtkdeclarative_shaders_ng.qrc  qml.cmake  qmlplugin_plugin.cpp  qmlplugin_plugin.h  src.cmake
src/: CMakeLists.txt  DHandleContextMenuWindow  DQMLGlobalObject  DQmlAppPluginInterface  DQuickIconFinder  DQuickPalette  DQuickProgressBar  DQuickView  dapploader.cpp  dapploader.h  dhandlecontextmenuwindow.cpp  dhandlecontextmenuwindow.h  dplatformthemeproxy.cpp  dplatformthemeproxy.h  dqmlappmainwindowinterface.cpp  dqmlappmainwindowinterface.h  dqmlappplugininterface.h  dqmlapppreloadinterface.cpp  dqmlapppreloadinterface.h  dqmlglobalobject.cpp  dqmlglobalobject.h  dquickblitframebuffer.cpp  dquickblitframebuffer.h  dquickglow.cpp  dquickglow.h  dquickiconfinder.cpp  dquickiconfinder.h  dquickiconprovider.cpp  dquickiconprovider.h  dquickinwindowblendblur.cpp  dquickinwindowblendblur.h  dquickitemviewport.cpp  dquickitemviewport.h  dquickpalette.cpp  dquickpalette.h  dquickprogressbar.cpp  dquickprogressbar.h  dquickradiuseffect.cpp  dquickradiuseffect.h  dquickrectangle.cpp  (+19 more)
src/pkgconfig/: dtkdeclarative.pc
src/private/: dapploader_p.h  dbackdropnode.cpp  dblitframebuffernode.cpp  dblitframebuffernode_p.h  dblurimagenode.cpp  dblurimagenode_p.h  dcoloroverlaynode.cpp  dcoloroverlaynode.h  dconfigwrapper.cpp  dconfigwrapper_p.h  dhandlecontextmenuwindow.cpp  dhandlecontextmenuwindow_p.h  dlicenseinfoprovider.cpp  dlicenseinfoprovider_p.h  dmaskeffectnode.cpp  dmaskeffectnode_p.h  dmessagemanager.cpp  dmessagemanager_p.h  dobjectmodelproxy.cpp  dobjectmodelproxy_p.h  dopacitymasknode.cpp  dopacitymasknode.h  dplatformthemeproxy_p.h  dpopupwindowhandle.cpp  dpopupwindowhandle_p.h  dqmlglobalobject.cpp  dqmlglobalobject_p.h  dqmlglobalobject_p_p.h  dquickapploaderitem.cpp  dquickapploaderitem_p.h  dquickarrowboxpath.cpp  dquickarrowboxpath_p.h  dquickbackdropblitter.cpp  (+79 more)
tests/: CMakeLists.txt  data.qrc  main.cpp  test-recoverage-qmake.sh  test-recoverage.sh  test_helper.hpp  tests.pro  ut_colorselector.cpp  ut_dapploader.cpp  ut_dblitframebuffernode.cpp  ut_dblurimagenode.cpp  ut_dconfigwrapper.cpp  ut_dmaskeffectnode.cpp  ut_dmessagemanager.cpp  ut_dplatformthemeproxy.cpp  ut_dqmlglobalobject.cpp  ut_dquickarrowboxpath.cpp  ut_dquickbehindwindowblur.cpp  ut_dquickdciiconimage.cpp  ut_dquickglow.cpp  ut_dquickinwindowblur.cpp  ut_dquickrectangle.cpp  ut_dquickwindow.cpp  ut_qsgrenderer_accessor.cpp  ut_thememenu.cpp  ut_waterprogressbar.cpp  ut_windowbuttongroup.cpp
(+654 files in other folders)
